0.5.5.0

- moved primitive array classes to Data.PrimitiveArray.Class
- added _from / _to lenses

0.5.4.0

- actually implemented PointR

- added the rather important strictness annotation for mutable arrays in .Zero

0.5.3.0

- fixed vector-th-unbox problem