@@ -39,6 +39,7 @@ Library
   Build-depends:
     base            >= 4 && <5  ,
     deepseq         >= 1.3      ,
+    lens            >= 4.0      ,
     primitive       >= 0.5.0.1  ,
     QuickCheck      >= 2.5      ,
     repa            >= 3.2.3    ,
