@@ -2,6 +2,7 @@
 
 - moved primitive array classes to Data.PrimitiveArray.Class
 - added _from / _to lenses
+- Field2 .. Field7 lenses for indices (Z:.a:.b...) (with Z being Field1)
 
 0.5.4.0
 
